Gene table pagination added.

--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -47,16 +47,19 @@
 .table-container {
   margin-top:30px;
   overflow:auto;
-  max-height:500px;
   padding-right: 1px;
   .table {
     margin-bottom:0px;
+
+    th.footable-sortable {
+      padding-right:20px;
+    }
 
     td {
       min-width:30px;
       min-height:50px;
       vertical-align:middle;
-      text-align:center;
+      text-align:left;
       &.protein {
         border:solid 1px #dddddd;
       }
@@ -183,4 +186,68 @@ th {
   content: "";
   float: left;
   margin-top: 100%;
+}
+.pager {
+  min-height:20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:50px;
+  li.active a {
+    color: rgb(153, 153, 153);
+    &:hover {
+      color: rgb(153, 153, 153);
+      background:none;
+    }
+  }
+  .next_page, .previous_page, a, em {
+    border-bottom-color: rgb(221, 221, 221);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: rgb(221, 221, 221);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-right-color: rgb(221, 221, 221);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-top-color: rgb(221, 221, 221);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    box-sizing: border-box;
+    cursor: auto;
+    display: inline-block;
+    font-size: 14px;
+    height: 32px;
+    line-height: 20px;
+    list-style-image: none;
+    list-style-position: outside;
+    list-style-type: none;
+    padding-bottom: 5px;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-top: 5px;
+    background:none;
+    text-decoration:none;
+    &.disabled, &.current {
+      color: rgb(153, 153, 153);
+      &:hover {
+        color: rgb(153, 153, 153);
+        background:none;
+      }
+    }
+    &:hover {
+      color: rgb(42, 100, 150);
+      background-color: rgb(238, 238, 238);
+    }
+  }
+  .gap, li {
+    padding-left:5px;
+  }
+  .page-select {
+    width:250px;
+  }
 }
