--- a/webapp/app/stylesheets/jobs/list.scss
+++ b/webapp/app/stylesheets/jobs/list.scss
@@ -62,6 +62,7 @@
     text-decoration:none;
     &.disabled, &.current {
       color: rgb(153, 153, 153);
+      font-style:normal;
       &:hover {
         color: rgb(153, 153, 153);
         background:none;
