Fixed bug in transcript view.

--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -157,6 +157,7 @@ div class="info"
                     - trans.matches.each do |prot|
                       td class="#{ prot ? 'match protein' : 'protein' }"
 
+      /* Table pagination. */
       div id="pager-div" class="pager pagination hide-if-no-paging"
         select class='form-control pull-right page-select' id="page-select"
           option value="8" Show 8 records per page
