Small CSS tweak.

--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -5,8 +5,8 @@
 .general-info {
   .species {
     font-family: Ubuntu;
-    color: #428bca;
     font-size: 1.8em;
+    font-weight:500;
   }
   .stats {
     font-family: Ubuntu;
