Protein view added.

--- a/webapp/app/stylesheets/main.scss
+++ b/webapp/app/stylesheets/main.scss
@@ -3,6 +3,7 @@ $urlprefix: '/pbsfinder';
 /* -- Begin Layout -- */
 html, body {
   height: 100%;
+  font-size:14px;
 }
 .container {
   width:1170px !important;
