--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -1,10 +1,6 @@
 .panel-info {
   margin-top: 30px; }
 
-.general-info .species {
-  font-family: Ubuntu;
-  font-size: 1.8em;
-  font-weight: 500; }
 .general-info .stats {
   font-family: Ubuntu;
   color: #428bca;
@@ -32,7 +28,7 @@
   margin-top: 30px; }
 
 .table-container {
-  margin-top: 30px;
+  margin-top: 20px;
   overflow: auto;
   padding-right: 1px; }
   .table-container .table {
@@ -121,11 +117,15 @@ th {
   display: none; }
 
 .chart-name {
-  margin-top: 20px;
+  margin-top: 0px;
   font-variant: small-caps;
   font-weight: 500;
   font-size: 1.8em;
-  font-family: Ubuntu; }
+  font-family: Ubuntu;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #aaa;
+  max-width: 300px;
+  padding-bottom: 5px; }
 
 .chart {
   height: 320px; }
