--- a/webapp/public/pbsfinder/stylesheets/main.css
+++ b/webapp/public/pbsfinder/stylesheets/main.css
@@ -1,6 +1,7 @@
 /* -- Begin Layout -- */
 html, body {
-  height: 100%; }
+  height: 100%;
+  font-size: 14px; }
 
 .container {
   width: 1170px !important; }
