--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -43,10 +43,13 @@ div class="info"
           span = "#{t('job.view.download')} "
           span class="caret"
         ul class="dropdown-menu download-menu" role="menu"
-          li
-            = link_to 'CSV', url_for(:jobs, :job, @job.id, :format => :csv)
-          li
-            = link_to 'TSV', url_for(:jobs, :job, @job.id, :format => :tsv)
+          li role="presentation" class="dropdown-header" = t('job.view.download_rbp')
+          li = link_to 'CSV', url_for(:jobs, :job, @job.id, :format => :csv)
+          li = link_to 'TSV', url_for(:jobs, :job, @job.id, :format => :tsv)
+          li role="presentation" class="divider"
+          li role="presentation" class="dropdown-header" = t('job.view.download_prot')
+          li = link_to 'CSV', url_for(:jobs, :job_prot, @job.id, :format => :csv)
+          li = link_to 'TSV', url_for(:jobs, :job_prot, @job.id, :format => :tsv)
 
     /* Problem reporting. */
     = partial 'jobs/report_form', :locals => { job_id: @job.id }
